<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvRoomDetailTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="22dip"
        android:layout_marginBottom="12dip"
        android:text="@string/roomdetailactivity_title"/>
    <TextView
        android:id="@+id/tvRoomDetailRoomNumber"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:text="@string/roomdetailactivity_roomnumber"
        android:textSize="18dip"
        android:layout_below="@id/tvRoomDetailTitle"/>
    <EditText
        android:id="@+id/etRoomDetailRoomNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRoomDetailTitle"
        android:layout_toRightOf="@id/tvRoomDetailRoomNumber"/>
    <TextView
        android:id="@+id/tvRoomDetailRoomType"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:text="@string/roomdetailactivity_roomtype"
        android:textSize="18dip"
        android:layout_below="@id/etRoomDetailRoomNumber"/>
    <Spinner
        android:id="@+id/spnRoomDetailRoomType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRoomDetailRoomNumber"
        android:layout_toRightOf="@id/tvRoomDetailRoomType">

    </Spinner>
    <TextView
        android:id="@+id/tvRoomDetailStatus"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:text="@string/roomdetailactivity_roomstatus"
        android:textSize="18dip"
        android:layout_below="@id/spnRoomDetailRoomType"/>
    <CheckBox
        android:id="@+id/cbRoomDetailStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spnRoomDetailRoomType"
        android:layout_toRightOf="@id/tvRoomDetailStatus"/>
    <TextView
        android:id="@+id/tvRoomDetailPrice"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:text="@string/roomdetailactivity_price"
        android:textSize="18dip"
        android:layout_below="@id/cbRoomDetailStatus"/>
    <EditText
        android:id="@+id/etRoomDetailRoomPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbRoomDetailStatus"
        android:layout_toRightOf="@id/tvRoomDetailPrice"/>
    <TextView
        android:id="@+id/tvRoomDetailDescription"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:text="@string/roomdetailactivity_description"
        android:textSize="18dip"
        android:layout_below="@id/etRoomDetailRoomPrice"/>
    <EditText
        android:id="@+id/etRoomDetailDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:maxLines="10"
        android:lines="5"
        android:gravity="top|left"
        android:layout_below="@id/tvRoomDetailDescription"/>
    <TextView
        android:id="@+id/tvRoomDetailPhoto"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:text="@string/roomdetailactivity_image"
        android:textSize="18dip"
        android:layout_below="@id/etRoomDetailDescription"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnRoomDetailDelete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete" />
        <Button
            android:id="@+id/btnRoomDetailUpdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update" />
    </LinearLayout>
</RelativeLayout>