<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/tvAddRoomTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22dip"
            android:layout_marginBottom="12dip"
            android:text="@string/addroomactivity_title"/>
        <TextView
            android:id="@+id/tvAddRoomRoomNumber"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:text="@string/addroomactivity_roomnumber"
            android:textSize="18dip"
            android:layout_below="@id/tvAddRoomTitle"/>
        <EditText
            android:id="@+id/etAddRoomRoomNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAddRoomTitle"
            android:layout_toRightOf="@id/tvAddRoomRoomNumber"/>
        <TextView
            android:id="@+id/tvAddRoomRoomType"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:text="@string/addroomactivity_roomtype"
            android:textSize="18dip"
            android:layout_below="@id/etAddRoomRoomNumber"/>
        <Spinner
            android:id="@+id/spnAddRoomRoomType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etAddRoomRoomNumber"
            android:layout_toRightOf="@id/tvAddRoomRoomType">

        </Spinner>
        <TextView
            android:id="@+id/tvAddRoomStatus"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:text="@string/addroomactivity_roomstatus"
            android:textSize="18dip"
            android:layout_below="@id/spnAddRoomRoomType"/>
        <CheckBox
            android:id="@+id/cbAddRoomStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spnAddRoomRoomType"
            android:layout_toRightOf="@id/tvAddRoomStatus"/>
        <TextView
            android:id="@+id/tvAddRoomPrice"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:text="@string/addroomactivity_price"
            android:textSize="18dip"
            android:layout_below="@id/cbAddRoomStatus"/>
        <EditText
            android:id="@+id/etAddRoomRoomPrice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbAddRoomStatus"
            android:layout_toRightOf="@id/tvAddRoomPrice"/>
        <TextView
            android:id="@+id/tvAddRoomDescription"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:text="@string/addroomactivity_description"
            android:textSize="18dip"
            android:layout_below="@id/etAddRoomRoomPrice"/>
        <EditText
            android:id="@+id/etAddRoomDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:maxLines="10"
            android:lines="5"
            android:gravity="top|left"
            android:layout_below="@id/tvAddRoomDescription"/>
        <TextView
            android:id="@+id/tvAddRoomPhoto"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:text="@string/addroomactivity_image"
            android:textSize="18dip"
            android:layout_below="@id/etAddRoomDescription"/>
        <Button
            android:id="@+id/btnAddRoomAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            android:layout_alignParentBottom="true"/>
</RelativeLayout>